# landing-algo

./: .gitignore  CMakeLists.txt  constants.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gameobjects/: CMakeLists.txt  constants.h  genealgo.cpp  genealgo.h  genecontroller.cpp  genecontroller.h  genome.cpp  genome.h  lander.cpp  lander.h
graphicobjects/: CMakeLists.txt  graphicalobject.cpp  graphicalobject.h  point.h  testfigure.cpp  testfigure.h  vector2d.cpp  vector2d.h
neuronet/: CMakeLists.txt  nlink.cpp  nlink.h  sneuralnet.cpp  sneuralnet.h  sneuron.cpp  sneuron.h  sneuronlayer.cpp  sneuronlayer.h
